# DSL-Syntax-Highlighter

./: .gitignore  CMakeLists.txt  README.md
toyeditor/: CMakeLists.txt  editor.c
